Fix header z-index

--- a/sass/custom/_layout.scss
+++ b/sass/custom/_layout.scss
@@ -60,6 +60,7 @@ html {
         .pull-right {
             position: fixed;
         }
+        z-index: 999;
     }
     .hero {
         > .grid-wrapper {
